--- a/faq.txt
+++ b/faq.txt
@@ -1,6 +1,15 @@
 *Диагностика УТМ*
-Рабочий УТМ должен быть доступен на localhost:8080, на странице не должно быть сообщений об ошибках.
+Рабочий УТМ должен быть доступен на `localhost:8080`, на странице не должно быть сообщений об ошибках.
 Проблемы могут быть с ключом, со связью (допустимо 3 дня работы в офлайн)
+
+*Марка невалидна*
+1. Проверить ошибки на УТМ через отчет
+2. Проверить ошибочную марку из отчета в УТМ
+3. Если "штрихкод не найден", обновить настройки УТМ
+4. Если обновление не может быть выполнено, проверить доступность mark-utm.egais.ru:8443 например командой Test-NetConnection -Port 8443 -ComputerName mark-utm.egais.ru
+5. Если недоступен, проверить сеть или проверить с другого сервера (проблема на конкретном утм, или на многих (на чьей стороне))
+6. Попробовать установить настройки прокси для УТМ по c$\utm\transporter\conf\transport.properties (proxy.* параметры, имя пользователя@severotorg.local)
+7. Попробовать перезапустить службу УТМ \ хост
 
 *Недоступен ключ Рутокен \ Джакарта.*
 1. Проверить подключен ли ключ к серверу с УТМ
@@ -20,10 +29,6 @@
     `transport-updater : \UTM\updater\l\update.log` (вспомогательная служба УТМ)
     `transport : \UTM\transport\l\transport_info.log`
 
-*Нет связи с ЕГАИС*
-1. Убедиться, что доступен utm.egais.ru, update.egais.ru порт 443
-2. Если проблема не решена, перезапустить службу transport
-
 *УТМ запущен, localhost:8080 доступен, но на кассе не удается подписать чек HTTP request failed*
 1. Проверить адрес сервера УТМ в настройках УКМ, Настройки - Интеграция - ЕГАИС
 2. Проверить ping с кассы на сервер УТМ
@@ -31,5 +36,5 @@
 
 *Проблемы с обменом Супермага*
 1. Проверить состояние УТМ, для приема-отправки документов должен быть исправен ключ
-2. Проверить вкладки входящие, исходящие. Очередь исходящих должна быть пуста, иначе проверить связь
+2. Проверить на УТМ вкладки входящие, исходящие. Очередь исходящих должна быть пуста, иначе проверить связь
 3. Проверить очередь обмена в Супермаге
